landing image distortion fix

--- a/webapp/client/src/styles/style.css
+++ b/webapp/client/src/styles/style.css
@@ -75,8 +75,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  width: 95vh;
-  height: 95vh;
   /*(height and width handled by scaleLanding() in ui.js)*/
 }
 
@@ -87,7 +85,6 @@
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  /*(height and width handled by scaleLanding() in ui.js)*/
 }
 
 .button_landing {
